2010-09-07  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/test/test_wizard_save.py:
	Fix tests to work with the new default configuration

2010-09-07  Xavier Queralt  <xqueralt@flumotion.com>

	patch by: Hiroaki Kawai<kawai@iij.ad.jp>

	* flumotion/component/producers/firewire/wizard_gtk.py:
	Set the deinterlacing method to tomsmocomp instead of the mode.

2010-08-31  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/test/test_wizard_save.py:
	Fix tests to work with the new default configuration

2010-08-31  Xavier Queralt  <xqueralt@flumotion.com>

	* configure.ac:
	* pkg/ubuntu-karmic/changelog:
	* pkg/ubuntu-lucid/changelog:
	0.7.0.3 pre-release

2010-08-31  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/producers/firewire/wizard_gtk.py:
	Default to gstreamer's deinterlace

2010-08-31  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/producers/firewire/firewire.py:
	Set the name to the decoder so the effects can be plugged properly

2010-08-30  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* pkg/ubuntu-karmic/control:
	* pkg/ubuntu-lucid/control:
	Add missing 'python-dev' build dependency

2010-08-27  Xavier Queralt <xqueralt@gmail.com>

	* configure.ac:
	0.7.0.2 prerelase

2010-08-27  Xavier Queralt <xqueralt@gmail.com>

	* flumotion/admin/gtk/dialogs.py:
	Update the list of authors.

2010-08-27  Xavier Queralt <xqueralt@gmail.com>

	* pkg/ubuntu-karmic/changelog:
	* pkg/ubuntu-karmic/control:
	* pkg/ubuntu-lucid/changelog:
	* pkg/ubuntu-lucid/control:
	Update for the 0.7.0.2 pre-release

2010-08-27  Xavier Queralt <xqueralt@gmail.com>

	reviewed by: Andoni Morales

	* flumotion/component/producers/firewire/firewire.py:
	* flumotion/component/producers/firewire/firewire.xml:
	Factor the dv decoder out so the user can select which decoder the
	component is going to use in the configuration.